--- a/html/index.html
+++ b/html/index.html
@@ -3,24 +3,28 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <title>MyCV - Lobby</title>
-    <link href="../Css/styless.css" type="text/css" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
+  <title>MyCV - Lobby</title>
+  <link href="../css/style.css" type="text/css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
-    <div class="grid-container-main-topic">
-        <div class="grid-container-main-1"><h1>Artem Salatskyi's CV</h1></div> <!-- Название сайта большыми буквами-->
-
-        <div class="grid-container-main-2"> <!-- ссылки на всё остальные страницы-->
-            <h3><a href="../html/CVpage.html"><h3>Link to CV page</a></h3>
-            <h3><a href="../html/AboutMePage.html">Link to page about me</a></h3>
-            <h3><a href="../html/PortfolioPage.html">Link to portfolio page</a></h3>
+  <header class="header">
+    <div class="container">
+      <div class="header-content">
+        <a href="../html/index.html" class="sign">
+          <img src="../images/sign.svg">
+        </a>
+        <div class="nav-bar">
+          <a href="/html/index.html" class="nav-bar-item">Home</a>
+          <a href="/html/cv.html" class="nav-bar-item">CV</a>
+          <a href="/html/about.html" class="nav-bar-item">About me</a>
+          <a href="/html/portfolio.html" class="nav-bar-item">Portfolio</a>
         </div>
-
-        <div class="grid-container-main-3"> тут будет фотка</div> <!-- Так чисто какую картинку или гифку воткнуть, чтоб место не пустовало-->
+      </div>
     </div>
+  </header>
 </body>
 
 </html>
