--- a/html/about.html
+++ b/html/about.html
@@ -12,7 +12,7 @@
 <body>
     <div class="grid-container-amp-topic">bla bla bla</div><!-- Коробочка с большым названием -->
 
-    <div class = "grid-container-amp">
+    <div class="grid-container-amp">
         <div class="grid-container-amp-1">
             <div></div>
         </div>
@@ -25,9 +25,16 @@
     </div>
 
     <div class="grid-navigation-main"> <!-- коробочка для навигации-->
-        <div class="grid-navigation-1"><h4><a href="../html/index.html">Link to main page</a></h4></div>
-        <div class="grid-navigation-2"><h4><a href="../html/AboutMePage.html">Link to page CV</a></h4></div>
-        <div class="grid-navigation-3"><h4><a href="../html/PortfolioPage.html">Link to portfolio page</a></h4></div><h4>
+        <div class="grid-navigation-1">
+            <h4><a href="../html/index.html">Link to main page</a></h4>
+        </div>
+        <div class="grid-navigation-2">
+            <h4><a href="../html/AboutMePage.html">Link to page CV</a></h4>
+        </div>
+        <div class="grid-navigation-3">
+            <h4><a href="../html/PortfolioPage.html">Link to portfolio page</a></h4>
+        </div>
+        <h4>
     </div>
 </body>
 
