--- a/html/index.html
+++ b/html/index.html
@@ -17,14 +17,28 @@
           <img src="../images/sign.svg">
         </a>
         <div class="nav-bar">
-          <a href="/html/index.html" class="nav-bar-item">Home</a>
-          <a href="/html/cv.html" class="nav-bar-item">CV</a>
-          <a href="/html/about.html" class="nav-bar-item">About me</a>
-          <a href="/html/portfolio.html" class="nav-bar-item">Portfolio</a>
+          <a href="../html/index.html" class="nav-bar-item">Home</a>
+          <a href="../html/cv.html" class="nav-bar-item">CV</a>
+          <a href="../html/about.html" class="nav-bar-item">About me</a>
+          <a href="../html/portfolio.html" class="nav-bar-item">Portfolio</a>
         </div>
       </div>
     </div>
   </header>
+  <main class="main">
+    <div class="main-cont-1">
+      <a href="../html/cv.html" class="my-photo-ring">
+        <img src="../images/myPhotoRing.png">
+      </a>
+      <h1>I'm studying<span class="dif-colour1"> coding!</span></h1>
+    </div>
+    <div class="main-cont-2">
+      <h3>About me</h3>
+    </div>
+    <div class="main-cont-3">
+      <h3>Portfolio</h3>
+    </div>
+  </main>
 </body>
 
 </html>
