--- a/html/about.html
+++ b/html/about.html
@@ -3,39 +3,31 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <title>MyCV - About me</title>
-    <link href="../Css/styless.css" type="text/css" rel="stylesheet" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
+  <title>MyCV - About me</title>
+  <link href="../css/style.css" type="text/css" rel="stylesheet" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
-    <div class="grid-container-amp-topic">bla bla bla</div><!-- Коробочка с большым названием -->
-
-    <div class="grid-container-amp">
-        <div class="grid-container-amp-1">
-            <div></div>
+  <header class="header">
+    <div class="container">
+      <div class="header-content">
+        <a href="../html/index.html" class="sign">
+          <img src="../images/sign.svg">
+        </a>
+        <div class="nav-bar">
+          <a href="../html/index.html" class="nav-bar-item">Home</a>
+          <a href="../html/cv.html" class="nav-bar-item">CV</a>
+          <a href="../html/about.html" class="nav-bar-item">About me</a>
+          <a href="../html/portfolio.html" class="nav-bar-item">Portfolio</a>
         </div>
-        <div class="grid-container-amp-2">
-            <div></div>
-        </div>
-        <div class="grid-container-amp-3">
-            <div></div>
-        </div>
+      </div>
     </div>
+  </header>
+  <main class="">
 
-    <div class="grid-navigation-main"> <!-- коробочка для навигации-->
-        <div class="grid-navigation-1">
-            <h4><a href="../html/index.html">Link to main page</a></h4>
-        </div>
-        <div class="grid-navigation-2">
-            <h4><a href="../html/AboutMePage.html">Link to page CV</a></h4>
-        </div>
-        <div class="grid-navigation-3">
-            <h4><a href="../html/PortfolioPage.html">Link to portfolio page</a></h4>
-        </div>
-        <h4>
-    </div>
+  </main>
 </body>
 
 </html>
