--- a/html/cv.html
+++ b/html/cv.html
@@ -5,82 +5,72 @@
 <head>
   <meta charset="utf-8">
   <title>MyCV - CV</title>
-  <link href="../Css/styless.css" type="text/css" rel="stylesheet" />
+  <link href="../css/style.css" type="text/css" rel="stylesheet" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
-  <div class="grid-container-CV-group"> <!-- Это общая группа для основной информации про меня -->
-    <div class="grid-container-CV-group-1"><img src="../images/imgonline-com-ua-Resize-cm-mm-inch-DciMyCiWj7utyY0b.jpg"
-        height="100%" width="40%"></div>
-    <!-- квадратик с фото -->
-    <div class="grid-container-CV-group-2"> <!-- квадратик с именем и фамилией-->
+  <header class="header">
+    <div class="container">
+      <div class="header-content">
+        <a href="../html/index.html" class="sign">
+          <img src="../images/sign.svg">
+        </a>
+        <div class="nav-bar">
+          <a href="../html/index.html" class="nav-bar-item">Home</a>
+          <a href="../html/cv.html" class="nav-bar-item">CV</a>
+          <a href="../html/about.html" class="nav-bar-item">About me</a>
+          <a href="../html/portfolio.html" class="nav-bar-item">Portfolio</a>
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <div class="block-container">
+    <div class="block-1">
+      <div class="my-photo">
+        <img src="../images/myPhoto.jpg">
+      </div>
+    </div>
+    <div class="block-2">
       <h3>Name:</h3>
       <p>Artem</p>
       <h3>Sourname:</h3>
       <p>Salatskyi</p>
     </div>
-    <div class="grid-container-CV-group-3"> <!-- квадратик с нацыональностю-->S
+    <div class="block-3">
       <h3>Nationality:</h3>
       <p>Ukrainian</p>
     </div>
-  </div>
-
-  <div class="grid-container-CV-info-group"> <!-- общая группа для остальной информации, возможно ссылка на более
-        подробную информацыю на других страницах-->
-    <div class="grid-container-CV-info-group-1">
-      <h4>Lenguges</h4> <!-- тут по языкам, идея так сказть позаимствована у 
-            датской системы резюме-->
-      <Table>
-        <dd>Ukrainian</dd>
-        <dd>Russish</dd>
-        <dd>English </dd>
-        <dd>Slovakish</dd>
-        <dd>Danish</dd>
-      </Table>11
+    <div class="block-4">
+      <h4>Lenguges</h4>
+      <p>Ukrainian</p>
+      <p>Russish</p>
+      <p>English </p>
+      <p>Slovakish</p>
+      <p>Danish</p>
     </div>
-
-    <div class="grid-container-CV-info-group-2"> <!-- коробочка с перещётом моего опыта роботы -->
+    <div class="block-5">
       <h4>Work expiriens:</h4>
       <p>free lance 3d modeler - 1 project</p>
     </div>
-
-    <div class="grid-container-CV-info-group-3"><!-- коробочка под хобби-->
+    <div class="block-6">
       <h4>Hobbys</h4>
-      <Table>
-        <dd>Warhammer</dd>
-        <dd>Calistetics</dd>
-        <dd>Art</dd>
-      </Table>
+      <p>Warhammer</p>
+      <p>Calistetics</p>
+      <p>Art</p>
     </div>
-
-    <div class="grid-container-CV-info-group-4"><!-- коробочка для пройденного образования -->
+    <div class="block-7">
       <h4>Finished syudies</h4>
-      <dd>1, 2, 3 grades of school</dd>
-      <dd>VIA-university -> now</dd>
+      <p>1, 2, 3 grades of school</p>
+      <p>VIA-university -> now</p>
     </div>
-
-    <div class="grid-container-CV-info-group-5"><!-- коробочка для списка освоеных програм -->
+    <div class="block-8">
       <h4>Mastering the program</h4>
-      <Table>
-        <dd>Blender 3d</dd>
-      </Table>
+      <p>Blender 3d</p>
     </div>
   </div>
 
-
-  <div class="grid-navigation-main"> <!-- коробочка для навигации-->
-    <div class="grid-navigation-1">
-      <h4><a href="../html/index.html">Link to main page</a></h4>
-    </div>
-    <div class="grid-navigation-2">
-      <h4><a href="../html/AboutMePage.html">Link to page CV</a></h4>
-    </div>
-    <div class="grid-navigation-3">
-      <h4><a href="../html/PortfolioPage.html">Link to portfolio page</a></h4>
-    </div>
-    <h4>
-  </div>
 </body>
 
 </html>
