--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -3,31 +3,51 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <title>MyCV - Portfolio</title>
-    <link href="../Css/styless.css" type="text/css" rel="stylesheet" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
+  <title>MyCV - Portfolio</title>
+  <link href="../css/style.css" type="text/css" rel="stylesheet" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
-    <div class="grid-container-pof">
-        <div class="grid-container-pof-1"> бла бла бла<!-- Коробочка с большым названием --></div>
-
-        <div class="grid-container-pof-2"> бла бла бла </div>
+  <header class="header">
+    <div class="container">
+      <div class="header-content">
+        <a href="../html/index.html" class="sign">
+          <img src="../images/sign.svg">
+        </a>
+        <div class="nav-bar">
+          <a href="../html/index.html" class="nav-bar-item">Home</a>
+          <a href="../html/cv.html" class="nav-bar-item">CV</a>
+          <a href="../html/about.html" class="nav-bar-item">About me</a>
+          <a href="../html/portfolio.html" class="nav-bar-item">Portfolio</a>
+        </div>
+      </div>
     </div>
-
-    <div class="grid-navigation-main"> <!-- коробочка для навигации-->
-        <div class="grid-navigation-1">
-            <h4><a href="../html/index.html">Link to main page</a></h4>
-        </div>
-        <div class="grid-navigation-2">
-            <h4><a href="../html/AboutMePage.html">Link to page CV</a></h4>
-        </div>
-        <div class="grid-navigation-3">
-            <h4><a href="../html/PortfolioPage.html">Link to portfolio page</a></h4>
-        </div>
-        <h4>
+  </header>
+  <main class=".portfolio-container">
+    <div class="container1">
+      <div class="container1-photo"> <!-- Див поменять -->
+        <img src="../images/stalker3dModel.png" width="200px" height="200px">
+      </div> <!-- Див поменять -->
+      <div class="container1-text">
+      </div>
     </div>
+    <div class="container2">
+      <div class="container2-text"> <!-- Див поменять -->
+      </div>
+      <div class="container2-photo"> <!-- Див поменять -->
+        <img src="../images/hiSnowMan.png" width="200px" height="200px">
+      </div>
+    </div>
+    <div class="  container3">
+      <div class="container3-photo"> <!-- Див поменять -->
+        <img src="../images/WhSchoolVideoProg.png" width="200px" height="200px">
+      </div>
+      <div class="container3-text"> <!-- Див поменять -->
+      </div>
+    </div>
+  </main>
 </body>
 
 </html>
