Main piece of programming was ended

--- a/html/cv.html
+++ b/html/cv.html
@@ -35,7 +35,7 @@
     <div class="block-2">
       <h3>Name:</h3>
       <p>Artem</p>
-      <h3>Sourname:</h3>
+      <h3>Surname:</h3>
       <p>Salatskyi</p>
     </div>
     <div class="block-3">
@@ -43,11 +43,11 @@
       <p>Ukrainian</p>
     </div>
     <div class="block-4">
-      <h4>Lenguges</h4>
+      <h4>Languages:</h4>
       <p>Ukrainian</p>
-      <p>Russish</p>
+      <p>Russian</p>
       <p>English </p>
-      <p>Slovakish</p>
+      <p>Slovak</p>
       <p>Danish</p>
     </div>
     <div class="block-5">
