--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -25,26 +25,32 @@
       </div>
     </div>
   </header>
-  <main class=".portfolio-container">
+  <main class="portfolio-container">
     <div class="container1">
-      <div class="container1-photo"> <!-- Див поменять -->
-        <img src="../images/stalker3dModel.png" width="200px" height="200px">
-      </div> <!-- Див поменять -->
+      <div class="container1-photo">
+        <img src="../images/stalker3dModel.png" width="220px" height="220px">
+      </div>
       <div class="container1-text">
+        "Stalker model of the first stage of development for the design of a wooden phone holder. My only paid work.
+        Later, my model was processed and formatted for transfer to a format for wood carving"
       </div>
     </div>
     <div class="container2">
-      <div class="container2-text"> <!-- Див поменять -->
+      <div class="container2-text">
+        " The snowman was his project assignment after studying the topic of Blender3D in the school curriculum. Then I
+        got acquainted with the basic functions of the Blender3D program. Earning maximum points for this work."
       </div>
-      <div class="container2-photo"> <!-- Див поменять -->
-        <img src="../images/hiSnowMan.png" width="200px" height="200px">
+      <div class="container2-photo">
+        <img src="../images/hiSnowMan.png" width="220px" height="220px">
       </div>
     </div>
     <div class="  container3">
-      <div class="container3-photo"> <!-- Див поменять -->
-        <img src="../images/WhSchoolVideoProg.png" width="200px" height="200px">
+      <div class="container3-photo">
+        <img src="../images/WhSchoolVideoProg.png" width="220px" height="220px">
       </div>
-      <div class="container3-text"> <!-- Див поменять -->
+      <div class="container3-text">
+        "A video production for a school on the topic "My Hobby". I did a very large amount of work in 3 days, painting
+        the model from scratch, shooting footage, and editing the video into the final result."
       </div>
     </div>
   </main>
