--- a/html/about.html
+++ b/html/about.html
@@ -25,7 +25,21 @@
       </div>
     </div>
   </header>
-  <main class="">
+  <main class="main-about">
+    <div class="about-container">
+      <div class="about-text">
+          My name is Artem Salatsky, I come from Ukraine, from the city of Kyiv. I am 18 years old, born on March 20,
+        2007.I graduated from a 3-level lyceum, 11 grades, studied at Kamensky University in Bratislava, now I study at VIA
+        University. I know how to use Blender3D, I have some knowledge of the following programming languages: C++,
+        Python, Java, HTML, CSS. I have 2 main hobbies, Street Workout and Warhammer in general. I have been in Street
+        Workout for quite a long time and if I count from 0 to 10, then I have reached approximately 3.5/10. My favorite
+        elements are "Deathmatch" and "360". In Warhammer I want to highlight that in the tabletop version there are 2
+        large armies: space marines, gnomes. And I also want to highlight the game Dawn of War Soulstorm, now Definitive
+        edition. At the moment, I am in the top 5 of the rankings for my faction and play consistently in tournaments,
+        although my level is not yet high enough to enter the top 3 tournaments.
+      </div>
+    </div>
+  </main>
 
   </main>
 </body>
