--- a/html/index.html
+++ b/html/index.html
@@ -33,10 +33,12 @@
       <h1>I'm studying<span class="dif-colour1"> coding!</span></h1>
     </div>
     <div class="main-cont-2">
-      <h3>About me</h3>
+      <a href="../html/about.html"><img src="../images/about.png"></a>
+      <h3 class="dif-colour1">About me</h3>
     </div>
     <div class="main-cont-3">
-      <h3>Portfolio</h3>
+      <a href="../html/portfolio.html"><img src="../images/protf.jpg"></a>
+      <h3 class="dif-colour2">Portfolio</h3>
     </div>
   </main>
 </body>
