--- a/html/cv.html
+++ b/html/cv.html
@@ -27,45 +27,45 @@
   </header>
 
   <div class="block-container">
-    <div class="block-1">
+    <div class="block-tall">
       <div class="my-photo">
         <img src="../images/myPhoto.jpg">
       </div>
     </div>
-    <div class="block-2">
+    <div class="block">
       <h3>Name:</h3>
       <p>Artem</p>
       <h3>Surname:</h3>
       <p>Salatskyi</p>
     </div>
-    <div class="block-3">
+    <div class="block">
       <h3>Nationality:</h3>
       <p>Ukrainian</p>
     </div>
-    <div class="block-4">
+    <div class="block-tall">
       <h4>Languages:</h4>
-      <p>Ukrainian</p>
-      <p>Russian</p>
-      <p>English </p>
-      <p>Slovak</p>
-      <p>Danish</p>
+      <div>Ukrainian</div>
+      <div>Russian</div>
+      <div>English</div>
+      <div>Slovak</div>
+      <div>Danish</div>
     </div>
-    <div class="block-5">
+    <div class="block">
       <h4>Work expiriens:</h4>
       <p>free lance 3d modeler - 1 project</p>
     </div>
-    <div class="block-6">
+    <div class="block">
       <h4>Hobbys</h4>
       <p>Warhammer</p>
       <p>Calistetics</p>
       <p>Art</p>
     </div>
-    <div class="block-7">
+    <div class="block">
       <h4>Finished syudies</h4>
       <p>1, 2, 3 grades of school</p>
       <p>VIA-university -> now</p>
     </div>
-    <div class="block-8">
+    <div class="block">
       <h4>Mastering the program</h4>
       <p>Blender 3d</p>
     </div>
