--- a/html/index.html
+++ b/html/index.html
@@ -26,19 +26,19 @@
     </div>
   </header>
   <main class="main">
-    <div class="main-cont-1">
+    <div class="main-cont-photo">
       <a href="../html/cv.html" class="my-photo-ring">
         <img src="../images/myPhotoRing.png">
       </a>
-      <h1>I'm studying<span class="dif-colour1"> coding!</span></h1>
+      <h1>I'm studying<span class="text-highlitghted1"> coding!</span></h1>
     </div>
-    <div class="main-cont-2">
-      <a href="../html/about.html"><img src="../images/about.png"></a>
-      <h3 class="dif-colour1">About me</h3>
+    <div class="main-cont-block">
+      <a class="about" href="../html/about.html"><img  src="../images/about.png"></a>
+      <h3 class="text-highlitghted1">About me</h3>
     </div>
-    <div class="main-cont-3">
-      <a href="../html/portfolio.html"><img src="../images/protf.jpg"></a>
-      <h3 class="dif-colour2">Portfolio</h3>
+    <div class="main-cont-block">
+      <a class="portf" href="../html/portfolio.html"><img  src="../images/protf.jpg"></a>
+      <h3 class="text-highlitghted2">Portfolio</h3>
     </div>
   </main>
 </body>
