--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -26,29 +26,29 @@
     </div>
   </header>
   <main class="portfolio-container">
-    <div class="container1">
-      <div class="container1-photo">
+    <div class="portfolio-card">
+      <div class="portfolio-card-photo">
         <img src="../images/stalker3dModel.png" width="220px" height="220px">
       </div>
-      <div class="container1-text">
+      <div class="portfolio-card-text">
         "Stalker model of the first stage of development for the design of a wooden phone holder. My only paid work.
         Later, my model was processed and formatted for transfer to a format for wood carving"
       </div>
     </div>
-    <div class="container2">
-      <div class="container2-text">
+    <div class="portfolio-card portfolio-card-reversed">
+      <div class="portfolio-card-photo">
+        <img src="../images/hiSnowMan.png" width="220px" height="220px">
+      </div>
+      <div class="portfolio-card-text">
         " The snowman was his project assignment after studying the topic of Blender3D in the school curriculum. Then I
         got acquainted with the basic functions of the Blender3D program. Earning maximum points for this work."
       </div>
-      <div class="container2-photo">
-        <img src="../images/hiSnowMan.png" width="220px" height="220px">
-      </div>
     </div>
-    <div class="  container3">
-      <div class="container3-photo">
+    <div class="portfolio-card">
+      <div class="portfolio-card-photo">
         <img src="../images/WhSchoolVideoProg.png" width="220px" height="220px">
       </div>
-      <div class="container3-text">
+      <div class="portfolio-card-text">
         "A video production for a school on the topic "My Hobby". I did a very large amount of work in 3 days, painting
         the model from scratch, shooting footage, and editing the video into the final result."
       </div>
