--- a/html/index.html
+++ b/html/index.html
@@ -33,11 +33,11 @@
       <h1>I'm studying<span class="text-highlitghted1"> coding!</span></h1>
     </div>
     <div class="main-cont-block">
-      <a class="about" href="../html/about.html"><img  src="../images/about.png"></a>
+      <a class="reclama" href="../html/about.html"><img  src="../images/about.png"></a>
       <h3 class="text-highlitghted1">About me</h3>
     </div>
     <div class="main-cont-block">
-      <a class="portf" href="../html/portfolio.html"><img  src="../images/protf.jpg"></a>
+      <a class="reclama" href="../html/portfolio.html"><img  src="../images/protf.jpg"></a>
       <h3 class="text-highlitghted2">Portfolio</h3>
     </div>
   </main>
