add some information

--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -53,6 +53,22 @@
         the model from scratch, shooting footage, and editing the video into the final result."
       </div>
     </div>
+    <div class="portfolio-card portfolio-card-reversed">
+      <div class="portfolio-card-photo">
+        <img src="../images/avatrForSevion.png" width="220px" height="220px">
+      </div>
+      <div class="portfolio-card-text">
+        "I drew this picture at the request of a friend of mine. Although it ultimately didn't work out as his avatar, it was a solid practice in drawing for me, and a great experience in fulfilling orders."
+      </div>
+    </div>
+    <div class="portfolio-card">
+      <div class="portfolio-card-photo">
+        <img src="../images/bindsForDow.png" width="220px" height="220px">
+      </div>
+      <div class="portfolio-card-text">
+        "This is my curated list of favorite hotties that I use while playing Dawn of War."
+      </div>
+    </div>
   </main>
 </body>
 
