--- a/html/about.html
+++ b/html/about.html
@@ -14,7 +14,7 @@
     <div class="container">
       <div class="header-content">
         <a href="../html/index.html" class="sign">
-          <img src="../images/sign.svg">
+          <img src="../images/sign.svg" alt="">
         </a>
         <div class="nav-bar">
           <a href="../html/index.html" class="nav-bar-item">Home</a>
@@ -39,8 +39,6 @@
         although my level is not yet high enough to enter the top 3 tournaments.
       </div>
     </div>
-  </main>
-
   </main>
 </body>
 
