--- a/html/cv.html
+++ b/html/cv.html
@@ -14,7 +14,7 @@
     <div class="container">
       <div class="header-content">
         <a href="../html/index.html" class="sign">
-          <img src="../images/sign.svg">
+          <img src="../images/sign.svg" alt="">
         </a>
         <div class="nav-bar">
           <a href="../html/index.html" class="nav-bar-item">Home</a>
@@ -29,7 +29,7 @@
   <div class="block-container">
     <div class="block-tall">
       <div class="my-photo">
-        <img src="../images/myPhoto.jpg">
+        <img src="../images/myPhoto.jpg" alt="">
       </div>
     </div>
     <div class="block">
