--- a/html/index.html
+++ b/html/index.html
@@ -14,7 +14,7 @@
     <div class="container">
       <div class="header-content">
         <a href="../html/index.html" class="sign">
-          <img src="../images/sign.svg">
+          <img src="../images/sign.svg" alt="">
         </a>
         <div class="nav-bar">
           <a href="../html/index.html" class="nav-bar-item">Home</a>
@@ -28,16 +28,16 @@
   <main class="main">
     <div class="main-cont-photo">
       <a href="../html/cv.html" class="my-photo-ring">
-        <img src="../images/myPhotoRing.png">
+        <img src="../images/myPhotoRing.png" alt="">
       </a>
       <h1>I'm studying<span class="text-highlitghted1"> coding!</span></h1>
     </div>
     <div class="main-cont-block">
-      <a class="reclama" href="../html/about.html"><img  src="../images/about.png"></a>
+      <a class="reclama" href="../html/about.html"><img  src="../images/about.png" alt=""></a>
       <h3 class="text-highlitghted1">About me</h3>
     </div>
     <div class="main-cont-block">
-      <a class="reclama" href="../html/portfolio.html"><img  src="../images/protf.jpg"></a>
+      <a class="reclama" href="../html/portfolio.html"><img  src="../images/protf.jpg" alt=""></a>
       <h3 class="text-highlitghted2">Portfolio</h3>
     </div>
   </main>
