--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -14,7 +14,7 @@
     <div class="container">
       <div class="header-content">
         <a href="../html/index.html" class="sign">
-          <img src="../images/sign.svg">
+          <img src="../images/sign.svg" alt="">
         </a>
         <div class="nav-bar">
           <a href="../html/index.html" class="nav-bar-item">Home</a>
@@ -28,7 +28,7 @@
   <main class="portfolio-container">
     <div class="portfolio-card">
       <div class="portfolio-card-photo">
-        <img src="../images/stalker3dModel.png" width="220px" height="220px">
+        <img src="../images/stalker3dModel.png" alt="">
       </div>
       <div class="portfolio-card-text">
         "Stalker model of the first stage of development for the design of a wooden phone holder. My only paid work.
@@ -37,7 +37,7 @@
     </div>
     <div class="portfolio-card portfolio-card-reversed">
       <div class="portfolio-card-photo">
-        <img src="../images/hiSnowMan.png" width="220px" height="220px">
+        <img src="../images/hiSnowMan.png" alt="">
       </div>
       <div class="portfolio-card-text">
         " The snowman was his project assignment after studying the topic of Blender3D in the school curriculum. Then I
@@ -46,7 +46,7 @@
     </div>
     <div class="portfolio-card">
       <div class="portfolio-card-photo">
-        <img src="../images/WhSchoolVideoProg.png" width="220px" height="220px">
+        <img src="../images/WhSchoolVideoProg.png" alt="">
       </div>
       <div class="portfolio-card-text">
         "A video production for a school on the topic "My Hobby". I did a very large amount of work in 3 days, painting
@@ -55,7 +55,7 @@
     </div>
     <div class="portfolio-card portfolio-card-reversed">
       <div class="portfolio-card-photo">
-        <img src="../images/avatrForSevion.png" width="220px" height="220px">
+        <img src="../images/avatrForSevion.png" alt="">
       </div>
       <div class="portfolio-card-text">
         "I drew this picture at the request of a friend of mine. Although it ultimately didn't work out as his avatar, it was a solid practice in drawing for me, and a great experience in fulfilling orders."
@@ -63,7 +63,7 @@
     </div>
     <div class="portfolio-card">
       <div class="portfolio-card-photo">
-        <img src="../images/bindsForDow.png" width="220px" height="220px">
+        <img src="../images/bindsForDow.png" alt="">
       </div>
       <div class="portfolio-card-text">
         "This is my curated list of favorite hotties that I use while playing Dawn of War."
