--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -66,7 +66,7 @@
         <img src="../images/bindsForDow.png" alt="">
       </div>
       <div class="portfolio-card-text">
-        "This is my curated list of favorite hotties that I use while playing Dawn of War."
+        "This is my curated list of favorite hotkeys that I use while playing Dawn of War."
       </div>
     </div>
   </main>
