--- a/html/about.html
+++ b/html/about.html
@@ -28,15 +28,19 @@
   <main class="main-about">
     <div class="about-container">
       <div class="about-text">
-          My name is Artem Salatsky, I come from Ukraine, from the city of Kyiv. I am 18 years old, born on March 20,
-        2007.I graduated from a 3-level lyceum, 11 grades, studied at Kamensky University in Bratislava, now I study at VIA
-        University. I know how to use Blender3D, I have some knowledge of the following programming languages: C++,
-        Python, Java, HTML, CSS. I have 2 main hobbies, Street Workout and Warhammer in general. I have been in Street
-        Workout for quite a long time and if I count from 0 to 10, then I have reached approximately 3.5/10. My favorite
-        elements are "Deathmatch" and "360". In Warhammer I want to highlight that in the tabletop version there are 2
-        large armies: space marines, gnomes. And I also want to highlight the game Dawn of War Soulstorm, now Definitive
-        edition. At the moment, I am in the top 5 of the rankings for my faction and play consistently in tournaments,
-        although my level is not yet high enough to enter the top 3 tournaments.
+          <p> My name is Artem Salatsky, and I am from Kyiv, Ukraine. I am 18 years old, born on March 20, 2007. I graduated
+        from a three-level lyceum after completing 11 grades and later studied at Kamensky University in Bratislava. I
+        am currently pursuing my studies at VIA University.</p>
+          <p> I am proficient in Blender3D and possess foundational knowledge of several programming languages, including C++,
+        Python, Java, HTML, and CSS.</p>
+          <p> My main interests are Street Workout and Warhammer. I have been engaged in Street Workout for several years and
+        would assess my current level at approximately 3.5 on a scale from 0 to 10. My favorite elements are
+        “Deathmatch” and “360.”</p>
+          <p> Warhammer, on the other hand, enables me to integrate my diverse interests — creativity, handcrafting,
+        storytelling, and strategic planning. In the tabletop version, I collect two major armies: Space Marines and
+        Dwarves. Additionally, I am an active player of Dawn of War: Soulstorm – Definitive Edition, where I currently
+        hold a position within the top five players of my faction and regularly participate in tournaments. Although I
+        am not yet among the top three competitors, I continue to improve and compete consistently.</p>
       </div>
     </div>
   </main>
