last check or pre last : )

--- a/html/about.html
+++ b/html/about.html
@@ -25,7 +25,7 @@
       </div>
     </div>
   </header>
-  <main class="main-about">
+  <main class="main-about container">
     <div class="about-container">
       <div class="about-text">
           <p> My name is Artem Salatsky, and I am from Kyiv, Ukraine. I am 18 years old, born on March 20, 2007. I graduated
