--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -25,7 +25,7 @@
       </div>
     </div>
   </header>
-  <main class="portfolio-container">
+  <main class="portfolio-container container">
     <div class="portfolio-card">
       <div class="portfolio-card-photo">
         <img src="../images/stalker3dModel.png" alt="">
